# Instante-Infinito

./: .env  bot.py  execute.py  main.py  pyproject.toml  teste.py  trigger_state.py  user_registry.py
auth/: auth.py
diario/: diario_storage.py
static/: script.js  style.css  telegramAuth.js
templates/: base.html  diario.html  index.html  magic.html  unauthorized.html
